// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultNavbar renders with route 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg css-1rujksk-MuiContainer-root"
>
  <div
    className="MuiBox-root css-1yv1dw1"
  >
    <div
      className="MuiBox-root css-1dyncq9"
    >
      <a
        href="/"
      >
        <span
          className="MuiTypography-root MuiTypography-button css-lan4mq-MuiTypography-root"
        >
          Daniel Hong Portfolio
        </span>
      </a>
      <div
        className="MuiBox-root css-k0f0w7"
      >
        <a
          href="/default"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
              data-testid="GitHubIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 1.27a11 11 0 00-3.48 21.46c.55.09.73-.28.73-.55v-1.84c-3.03.64-3.67-1.46-3.67-1.46-.55-1.29-1.28-1.65-1.28-1.65-.92-.65.1-.65.1-.65 1.1 0 1.73 1.1 1.73 1.1.92 1.65 2.57 1.2 3.21.92a2 2 0 01.64-1.47c-2.47-.27-5.04-1.19-5.04-5.5 0-1.1.46-2.1 1.2-2.84a3.76 3.76 0 010-2.93s.91-.28 3.11 1.1c1.8-.49 3.7-.49 5.5 0 2.1-1.38 3.02-1.1 3.02-1.1a3.76 3.76 0 010 2.93c.83.74 1.2 1.74 1.2 2.94 0 4.21-2.57 5.13-5.04 5.4.45.37.82.92.82 2.02v3.03c0 .27.1.64.73.55A11 11 0 0012 1.27"
              />
            </svg>
          </p>
          <span
            className="MuiTypography-root MuiTypography-button css-129xe1v-MuiTypography-root"
          >
            Github
          </span>
          <p
            className="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
          >
            <span
              aria-hidden={true}
              className="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
            />
          </p>
        </a>
      </div>
      <div
        className="MuiBox-root css-13l63k6"
      />
      <div
        className="MuiBox-root css-1kcb7bo"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          className="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeDefault css-75zff6-MuiIcon-root"
        >
          menu
        </span>
      </div>
    </div>
    <div
      className="MuiBox-root css-1kfwhtq"
    />
  </div>
</div>
`;

exports[`DefaultNavbar renders without route 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg css-1rujksk-MuiContainer-root"
>
  <div
    className="MuiBox-root css-1yv1dw1"
  >
    <div
      className="MuiBox-root css-1dyncq9"
    >
      <a
        href="/"
      >
        <span
          className="MuiTypography-root MuiTypography-button css-lan4mq-MuiTypography-root"
        >
          Daniel Hong Portfolio
        </span>
      </a>
      <div
        className="MuiBox-root css-k0f0w7"
      >
        <div
          className="MuiBox-root css-111f5ru"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <p
            className="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
              data-testid="GitHubIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 1.27a11 11 0 00-3.48 21.46c.55.09.73-.28.73-.55v-1.84c-3.03.64-3.67-1.46-3.67-1.46-.55-1.29-1.28-1.65-1.28-1.65-.92-.65.1-.65.1-.65 1.1 0 1.73 1.1 1.73 1.1.92 1.65 2.57 1.2 3.21.92a2 2 0 01.64-1.47c-2.47-.27-5.04-1.19-5.04-5.5 0-1.1.46-2.1 1.2-2.84a3.76 3.76 0 010-2.93s.91-.28 3.11 1.1c1.8-.49 3.7-.49 5.5 0 2.1-1.38 3.02-1.1 3.02-1.1a3.76 3.76 0 010 2.93c.83.74 1.2 1.74 1.2 2.94 0 4.21-2.57 5.13-5.04 5.4.45.37.82.92.82 2.02v3.03c0 .27.1.64.73.55A11 11 0 0012 1.27"
              />
            </svg>
          </p>
          <span
            className="MuiTypography-root MuiTypography-button css-129xe1v-MuiTypography-root"
          >
            Github
          </span>
          <p
            className="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
          >
            <span
              aria-hidden={true}
              className="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
            />
          </p>
        </div>
      </div>
      <div
        className="MuiBox-root css-13l63k6"
      />
      <div
        className="MuiBox-root css-1kcb7bo"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          className="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeDefault css-75zff6-MuiIcon-root"
        >
          menu
        </span>
      </div>
    </div>
    <div
      className="MuiBox-root css-1kfwhtq"
    />
  </div>
</div>
`;
